<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RAKer</string>
    <string name="settings">Settings</string>
    <string name="like">Like</string>
    <string name="share">Share</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="feedback">Feedback</string>
    <string name="contact_us">Contact Us</string>
    <string name="menu_settings">Settings</string>
    <string name="version">version 0.1</string>

</resources>